--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
-<%= link_to "<< Back to Articles List", article_path %>
+<%= link_to "Edit", [:edit, @article] %>
+<%= link_to "Delete", @article, method: :delete, data: {confirm: "Really delte the article?"} %><br>
+<%= link_to "<< Back to Articles List", articles_path %>
