--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,11 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
-<%= link_to "Edit", [:edit, @article] %>
-<%= link_to "Delete", @article, method: :delete, data: {confirm: "Really delte the article?"} %><br>
+<%= link_to "Edit", [:edit, @article] %><br>
+<%= link_to "Delete", @article, method: :delete, data: {confirm: "Really delete the article?"} %><br>
+
+<h3>Comments (<%= @article.comments.size %>)</h3>
+<%= render partial: 'comment', collection: @article.comments %>
+
+<%= render partial: 'comments/form' %>
+
 <%= link_to "<< Back to Articles List", articles_path %>
