--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,6 +12,10 @@
   <%= f.label :body %>
   <%= f.text_area :body %>
 </p>
+  <p>
+    <%= f.label :tag_list, "Add tags" %><br>
+    <%= f.text_field :tag_list%>
+  </p>
 <p>
   <%= f.submit %>
 </p>
