--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,11 +1,19 @@
 <h1><%= @article.title %></h1>
+<p>
+  Tags:
+  <% @article.tags.each do |tag| %>
+    <%= link_to tag.name, tag %>
+  <% end %>
+</p>
+<br>
 <p><%= @article.body %></p>
+<br>
 <%= link_to "Edit", [:edit, @article] %><br>
 <%= link_to "Delete", @article, method: :delete, data: {confirm: "Really delete the article?"} %><br>
-
+<br>
 <h3>Comments (<%= @article.comments.size %>)</h3>
 <%= render partial: 'comment', collection: @article.comments %>
 
 <%= render partial: 'comments/form' %>
-
-<%= link_to "<< Back to Articles List", articles_path %>
+<br>
+<%= link_to "<< Back to Blog Posts", articles_path %>
